--- a/indexx.html
+++ b/indexx.html
@@ -1,1 +1,12 @@
-Texto HTML
+<!DOCTYPE html>
+<<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Primera Página</title>
+</head>
+<body>
+
+</body>
+</html>
